# OpenGL-Drone-Demo

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: fragment.glsl  geometryPassFrag.glsl  geometryPassVert.glsl  lightingPassFrag.glsl  lightingPassVert.glsl  skyboxFrag.glsl  skyboxVert.glsl  textFrag.glsl  textVert.glsl  vertex.glsl  visualizationFrag.glsl
assets/textures/: font info.txt
framework/: CommonTypes.h  GameWindow.cpp  GameWindow.h  Input.cpp  OBJLoader.cpp  OBJLoader.h
libs/glew-2.1.0/: glew.pc
src/: Bounds.cpp  Bounds.h  Camera.cpp  Camera.h  CollectibleManager.cpp  CollectibleManager.h  DirectionalLight.cpp  DirectionalLight.h  DroneAnimator.cpp  DroneAnimator.h  DroneController.cpp  DroneController.h  FlowManager.cpp  FlowManager.h  Mesh.cpp  Mesh.h  PointLight.cpp  PointLight.h  Renderable.cpp  Renderable.h  SkyboxRenderer.cpp  SkyboxRenderer.h  SpotLight.cpp  SpotLight.h  TextRenderer.cpp  TextRenderer.h  Texture2D.cpp  Texture2D.h
src/Framework/Assets/: ShaderProgram.cpp  ShaderProgram.h
src/Framework/SceneElements/: Transform.cpp  Transform.h
src/Game/: Game.cpp  Game.h  Scene.cpp  Scene.h
